add custom user security configuration